--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>css tasks</title>
 </head>
 <body>
-    <a href="hello/hello.html">task 1</a>
+    <a href="margin/hi.html">task 1</a>
     
 </body>
 </html>
