--- a/hello/hello.html
+++ b/hello/hello.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>resume</title>
+    <style>
+        body{
+            margin-left: 10%;
+            margin-right: 10%;
+            margin-top: 5%;
+            margin-bottom: 5%;
+            padding:2%;
+            background-color:beige;
+
+        }
+        </style>
+        <link rel="stylesheet" href="demo.css">
 </head>
 <body>
-    <h1>Neelima Telakapalli</h1>
-    <p>Mobile Number:9963681931 | Email:telakapallineelima@gmail.com</p>
+    <h1 id="a">Neelima Telakapalli</h1>
+    <p text-align="center" class="b2" id="a">Mobile Number:9963681931 | Email:telakapallineelima@gmail.com</p>
+    <p text-align="center" class="b3" id="a">GitHub :https://github.com/Neelimarocky
+    <hr>
+    <h3 class="b1">Objective</h3>
+    <p class="b2">  Enthusiastic and motivated mca post graduate with a strong passion for the web development and programming. Currently learning and honing skills in HTML, CSS, JavaScript, Python, and SQL to build dynamic and efficient web applications. Commit and continuous learning and eager to apply theoretical knowledge to real-world projects. Posses strong analytical thinking interest in problem solving, aim to contribute effectively to innovative software development initiatives</p>
+    <h3 class="b1">Technical skiils</h3>
+    <ul class="b3">
+        <li>Programming Skills:python, JavaScript,SQL,React.js</li>
+        <li>Tools & Technologies: Git, GitHub,VScode</li>
+     </ul>
+     <h3 class="b1">Education</h3>
+     <ul class="b2">
+        <li>Master of computer application in Chadalawada Ramanamma engineering college, Tirupati 2022-2024, with 8.2 %</li>
+        <li>Bachelor of computer science in JRR Navodaya degree college, Gurazala 2019-2022, with 8.5 %</li>
+        <li>Intermediate from JRR Navodaya inter college,2017-2019 with 9.79 %</li>
+        <li>Secondary higher education from Karthikeya concept school, Gurazala with 9.5 %</li>
+        </ul> 
+        <h3 class="b1">Soft Skills</h3>
+        <ul class="b3">
+            <li>Good Communication</li>
+            <li>Adaptability</li>
+            <li>Leadership</li>
+            </ul>
+            <h3 class="b1">Projects</h3>
+            <b class="b2">T MINING AND STATISTICAL APPROACH FOR ASSESMENG OF PEDAGOGICAL IMPACT OF STUDENT’S EVALUATION OF TEACHING AND LEARNING OUTCOME’S IN EDUCATION</b>
+             <p class="b3"> The conclusion highlights the significance of using text mining and statistical approaches to evaluate teaching and learning outcomes. these methods provide valuable insights into instructional effectiveness and their impact of student. By analyzing feedback and identifying key patterns, educators can enhance teaching quality, optimize learning experiences, and drive continuous improvement in education</p>
     
 </body>
 </html>
